hphp/hack/test/typecheck/construct/lateinit/lateinit7.php.exp
File "lateinit7.php", line 10, characters 18-22:
A late-initialized property cannot have a default value (Typing[4277])
