hphp/hack/test/typecheck/construct/lateinit/lateinit7.php
<?hh // strict

final class C1 {
  <<__SoftLateInit>>
  private string $prop;
}

final class C2 {
  <<__SoftLateInit>>
  private string $prop = "1";
}
